[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/OpenSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/NextChManager.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 10
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 10
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 10
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 10
use_filter = true
font_data = ExtResource( 1 )

[node name="DialogueUI" type="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -77.0
margin_right = 144.0
margin_bottom = -4.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.827451 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectText" type="ColorRect" parent="."]
anchor_left = 0.038
anchor_top = 0.151
anchor_right = 0.764
anchor_bottom = 0.849
margin_left = 0.0560007
margin_top = -0.0230017
margin_right = -0.0320129
margin_bottom = 2.023
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectName" type="ColorRect" parent="."]
visible = false
anchor_left = 0.014
anchor_top = -0.151
anchor_right = 0.201
anchor_bottom = 0.055
margin_left = -0.0320001
margin_top = 0.0230007
margin_right = 0.112
margin_bottom = -0.0150003
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectButton" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.827451 )
anchor_left = 0.785
anchor_top = 0.178
anchor_right = 0.969
anchor_bottom = 0.425
margin_left = -0.0800018
margin_top = 0.00599957
margin_right = -0.0720215
margin_bottom = -0.0250015
color = Color( 0.454902, 0.443137, 0.443137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueText" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.056
anchor_top = 0.342
anchor_right = 0.708
anchor_bottom = 0.891
margin_left = -0.128
margin_top = -12.966
margin_right = 0.095993
margin_bottom = -4.043
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueName" type="RichTextLabel" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.042
anchor_top = -0.151
anchor_right = 0.201
anchor_bottom = 0.123
margin_left = 1.904
margin_top = 0.0230007
margin_right = 0.112
margin_bottom = 0.0209999
grow_horizontal = 2
custom_fonts/normal_font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueButton" type="Button" parent="Control"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.799
anchor_top = 0.137
anchor_right = 0.969
anchor_bottom = 0.452
margin_left = -0.112015
margin_top = -0.0010004
margin_right = -0.072052
margin_bottom = 0.0039978
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueButton2" type="Button" parent="Control"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.788
anchor_top = 0.589
anchor_right = 0.958
anchor_bottom = 0.863
margin_left = 0.0559845
margin_top = 0.00299835
margin_right = 0.0959473
margin_bottom = 0.000995636
focus_mode = 0
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
